fixes overlapping in work section

--- a/style.css
+++ b/style.css
@@ -458,17 +458,17 @@ width: 60%;
   }
 
   .work {
-    padding: 40px 188px;
+    padding: 40px 150px 40px 188px;
   }
 
   .work-container {
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
+    justify-content: space-around;
   }
 
   .work-column {
-    width: 45%;
+    /* width: 45%; */
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -516,7 +516,7 @@ width: 60%;
   }
 
   .yellow-card {
-    height: 120px;
+    height: 140px;
     margin-bottom: 100px;
   }
 
